# task

./: CMakeLists.txt  README.md  input.txt  run_tests.sh
src/: ComputerClub.cpp  ComputerClub.hpp  Event.cpp  Event.hpp  Table.cpp  Table.hpp  main.cpp  utilities.cpp  utilities.hpp
tests/: test1.txt  test1_result.txt  test2.txt  test2_result.txt  test3.txt  test3_result.txt  test4_result.txt  test5.txt  test5_result.txt  test6.txt  test6_result.txt
